Switch to purely graphical logo; fixes inconsistent text styling and alignment

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -105,6 +105,12 @@ body {
 
 .logoContainer {
   float: left;
+  .project-name {
+    font-size: 1.3rem;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 0.5em;
+  }
 }
 
 
