--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
@@ -53,6 +53,9 @@
       max-height: 120px;
       max-width: 100%;
     }
+    .project-name {
+      margin: 5px 0;
+    }
   }
 
   .input {
